@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
 
-# Form implementation generated from reading ui file 'closewindow.ui'
+# Form implementation generated from reading ui file 'closewindow2.ui'
 #
 # Created by: PyQt5 UI code generator 5.14.1
 #
@@ -13,7 +13,7 @@ from PyQt5 import QtCore, QtGui, QtWidgets
 class Ui_closeWindow(object):
     def setupUi(self, closeWindow):
         closeWindow.setObjectName("closeWindow")
-        closeWindow.resize(286, 182)
+        closeWindow.resize(342, 208)
         closeWindow.setMinimumSize(QtCore.QSize(0, 0))
         closeWindow.setMaximumSize(QtCore.QSize(16777215, 16777215))
         font = QtGui.QFont()
@@ -30,125 +30,257 @@ class Ui_closeWindow(object):
 "}")
         self.gridLayout = QtWidgets.QGridLayout(closeWindow)
         self.gridLayout.setObjectName("gridLayout")
-        spacerItem = QtWidgets.QSpacerItem(46, 20, QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Minimum)
-        self.gridLayout.addItem(spacerItem, 0, 0, 1, 1)
         self.verticalLayout = QtWidgets.QVBoxLayout()
+        self.verticalLayout.setSpacing(0)
         self.verticalLayout.setObjectName("verticalLayout")
+        self.horizontalLayout = QtWidgets.QHBoxLayout()
+        self.horizontalLayout.setObjectName("horizontalLayout")
+        spacerItem = QtWidgets.QSpacerItem(13, 20, QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Minimum)
+        self.horizontalLayout.addItem(spacerItem)
         self.exit_button = QtWidgets.QToolButton(closeWindow)
-        self.exit_button.setMinimumSize(QtCore.QSize(150, 35))
-        self.exit_button.setMaximumSize(QtCore.QSize(150, 35))
+        self.exit_button.setEnabled(True)
+        sizePolicy = QtWidgets.QSizePolicy(QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Fixed)
+        sizePolicy.setHorizontalStretch(0)
+        sizePolicy.setVerticalStretch(0)
+        sizePolicy.setHeightForWidth(self.exit_button.sizePolicy().hasHeightForWidth())
+        self.exit_button.setSizePolicy(sizePolicy)
+        self.exit_button.setMinimumSize(QtCore.QSize(50, 50))
+        self.exit_button.setMaximumSize(QtCore.QSize(50, 50))
         font = QtGui.QFont()
-        font.setFamily("Source Sans Pro")
-        font.setPointSize(14)
-        font.setBold(False)
-        font.setWeight(50)
+        font.setPointSize(22)
         font.setKerning(True)
-        font.setStyleStrategy(QtGui.QFont.PreferDefault)
+        font.setStyleStrategy(QtGui.QFont.PreferAntialias)
         self.exit_button.setFont(font)
         self.exit_button.setStyleSheet("QToolButton {\n"
-"    border: 1px solid #acacac;\n"
-"    border-radius: 1px;\n"
-"    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,\n"
-"                                    stop:0 #f0f0f0, stop:1 #e5e5e5);\n"
+"    border: 0px solid rgb(75,75,75);\n"
+"    border-radius: 3px;\n"
+"    background-color: transparent;\n"
+"    width: 27px;\n"
+"    height: 27px;\n"
 "    color: rgb(45,45,45);\n"
 "}\n"
 "\n"
-"QToolButton:hover {\n"
-"    border: 1px solid #7eb4ea;\n"
-"    border-radius: 1px;\n"
-"    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,\n"
-"                                    stop:0 #ecf4fc, stop:1 #dcecfc);\n"
-"}\n"
-"\n"
-"QToolButton:pressed {\n"
-"    border: 1px solid #579de5;\n"
-"    border-radius: 1px;\n"
-"    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,\n"
-"                                    stop:0 #daecfc, stop:1 #c4e0fc);\n"
+"QToolButton:flat {\n"
+"    border: none;\n"
 "}")
+        self.exit_button.setText("")
+        icon = QtGui.QIcon()
+        icon.addPixmap(QtGui.QPixmap("icons/exit_icon.svg"), QtGui.QIcon.Normal, QtGui.QIcon.Off)
+        self.exit_button.setIcon(icon)
+        self.exit_button.setIconSize(QtCore.QSize(45, 45))
         self.exit_button.setObjectName("exit_button")
-        self.verticalLayout.addWidget(self.exit_button)
-        spacerItem1 = QtWidgets.QSpacerItem(20, 10, QtWidgets.QSizePolicy.Minimum, QtWidgets.QSizePolicy.Expanding)
-        self.verticalLayout.addItem(spacerItem1)
-        self.reboot_button = QtWidgets.QToolButton(closeWindow)
-        self.reboot_button.setMinimumSize(QtCore.QSize(150, 35))
-        self.reboot_button.setMaximumSize(QtCore.QSize(150, 35))
+        self.horizontalLayout.addWidget(self.exit_button)
+        spacerItem1 = QtWidgets.QSpacerItem(13, 20, QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Minimum)
+        self.horizontalLayout.addItem(spacerItem1)
+        self.verticalLayout.addLayout(self.horizontalLayout)
+        self.exit_lb = QtWidgets.QLabel(closeWindow)
+        self.exit_lb.setMinimumSize(QtCore.QSize(0, 0))
+        self.exit_lb.setMaximumSize(QtCore.QSize(16777215, 16777215))
         font = QtGui.QFont()
         font.setFamily("Source Sans Pro")
         font.setPointSize(14)
-        font.setBold(False)
-        font.setWeight(50)
         font.setKerning(True)
-        font.setStyleStrategy(QtGui.QFont.PreferDefault)
+        font.setStyleStrategy(QtGui.QFont.PreferAntialias)
+        self.exit_lb.setFont(font)
+        self.exit_lb.setStyleSheet("QLabel {\n"
+"    color: rgb(45,45,45);\n"
+"}")
+        self.exit_lb.setAlignment(QtCore.Qt.AlignCenter)
+        self.exit_lb.setWordWrap(True)
+        self.exit_lb.setObjectName("exit_lb")
+        self.verticalLayout.addWidget(self.exit_lb)
+        self.gridLayout.addLayout(self.verticalLayout, 0, 0, 1, 1)
+        self.verticalLayout_2 = QtWidgets.QVBoxLayout()
+        self.verticalLayout_2.setSpacing(0)
+        self.verticalLayout_2.setObjectName("verticalLayout_2")
+        self.horizontalLayout_2 = QtWidgets.QHBoxLayout()
+        self.horizontalLayout_2.setObjectName("horizontalLayout_2")
+        spacerItem2 = QtWidgets.QSpacerItem(13, 20, QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Minimum)
+        self.horizontalLayout_2.addItem(spacerItem2)
+        self.reboot_button = QtWidgets.QToolButton(closeWindow)
+        self.reboot_button.setEnabled(True)
+        sizePolicy = QtWidgets.QSizePolicy(QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Fixed)
+        sizePolicy.setHorizontalStretch(0)
+        sizePolicy.setVerticalStretch(0)
+        sizePolicy.setHeightForWidth(self.reboot_button.sizePolicy().hasHeightForWidth())
+        self.reboot_button.setSizePolicy(sizePolicy)
+        self.reboot_button.setMinimumSize(QtCore.QSize(50, 50))
+        self.reboot_button.setMaximumSize(QtCore.QSize(50, 50))
+        font = QtGui.QFont()
+        font.setPointSize(22)
+        font.setKerning(True)
+        font.setStyleStrategy(QtGui.QFont.PreferAntialias)
         self.reboot_button.setFont(font)
         self.reboot_button.setStyleSheet("QToolButton {\n"
-"    border: 1px solid #acacac;\n"
-"    border-radius: 1px;\n"
-"    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,\n"
-"                                    stop:0 #f0f0f0, stop:1 #e5e5e5);\n"
+"    border: 0px solid rgb(75,75,75);\n"
+"    border-radius: 3px;\n"
+"    background-color: transparent;\n"
+"    width: 27px;\n"
+"    height: 27px;\n"
 "    color: rgb(45,45,45);\n"
 "}\n"
 "\n"
-"QToolButton:hover {\n"
-"    border: 1px solid #7eb4ea;\n"
-"    border-radius: 1px;\n"
-"    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,\n"
-"                                    stop:0 #ecf4fc, stop:1 #dcecfc);\n"
-"}\n"
-"\n"
-"QToolButton:pressed {\n"
-"    border: 1px solid #579de5;\n"
-"    border-radius: 1px;\n"
-"    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,\n"
-"                                    stop:0 #daecfc, stop:1 #c4e0fc);\n"
+"QToolButton:flat {\n"
+"    border: none;\n"
 "}")
+        self.reboot_button.setText("")
+        icon1 = QtGui.QIcon()
+        icon1.addPixmap(QtGui.QPixmap("icons/reboot_icon.svg"), QtGui.QIcon.Normal, QtGui.QIcon.Off)
+        self.reboot_button.setIcon(icon1)
+        self.reboot_button.setIconSize(QtCore.QSize(45, 45))
         self.reboot_button.setObjectName("reboot_button")
-        self.verticalLayout.addWidget(self.reboot_button)
-        spacerItem2 = QtWidgets.QSpacerItem(20, 10, QtWidgets.QSizePolicy.Minimum, QtWidgets.QSizePolicy.Expanding)
-        self.verticalLayout.addItem(spacerItem2)
-        self.shutdown_button = QtWidgets.QToolButton(closeWindow)
-        self.shutdown_button.setMinimumSize(QtCore.QSize(150, 35))
-        self.shutdown_button.setMaximumSize(QtCore.QSize(150, 35))
+        self.horizontalLayout_2.addWidget(self.reboot_button)
+        spacerItem3 = QtWidgets.QSpacerItem(13, 20, QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Minimum)
+        self.horizontalLayout_2.addItem(spacerItem3)
+        self.verticalLayout_2.addLayout(self.horizontalLayout_2)
+        self.reboot_lb = QtWidgets.QLabel(closeWindow)
+        self.reboot_lb.setMinimumSize(QtCore.QSize(0, 0))
+        self.reboot_lb.setMaximumSize(QtCore.QSize(16777215, 16777215))
         font = QtGui.QFont()
         font.setFamily("Source Sans Pro")
         font.setPointSize(14)
-        font.setBold(False)
-        font.setWeight(50)
         font.setKerning(True)
-        font.setStyleStrategy(QtGui.QFont.PreferDefault)
+        font.setStyleStrategy(QtGui.QFont.PreferAntialias)
+        self.reboot_lb.setFont(font)
+        self.reboot_lb.setStyleSheet("QLabel {\n"
+"    color: rgb(45,45,45);\n"
+"}")
+        self.reboot_lb.setAlignment(QtCore.Qt.AlignCenter)
+        self.reboot_lb.setWordWrap(True)
+        self.reboot_lb.setObjectName("reboot_lb")
+        self.verticalLayout_2.addWidget(self.reboot_lb)
+        self.gridLayout.addLayout(self.verticalLayout_2, 0, 1, 1, 1)
+        self.verticalLayout_3 = QtWidgets.QVBoxLayout()
+        self.verticalLayout_3.setSpacing(0)
+        self.verticalLayout_3.setObjectName("verticalLayout_3")
+        self.horizontalLayout_3 = QtWidgets.QHBoxLayout()
+        self.horizontalLayout_3.setObjectName("horizontalLayout_3")
+        spacerItem4 = QtWidgets.QSpacerItem(13, 20, QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Minimum)
+        self.horizontalLayout_3.addItem(spacerItem4)
+        self.shutdown_button = QtWidgets.QToolButton(closeWindow)
+        self.shutdown_button.setEnabled(True)
+        sizePolicy = QtWidgets.QSizePolicy(QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Fixed)
+        sizePolicy.setHorizontalStretch(0)
+        sizePolicy.setVerticalStretch(0)
+        sizePolicy.setHeightForWidth(self.shutdown_button.sizePolicy().hasHeightForWidth())
+        self.shutdown_button.setSizePolicy(sizePolicy)
+        self.shutdown_button.setMinimumSize(QtCore.QSize(50, 50))
+        self.shutdown_button.setMaximumSize(QtCore.QSize(50, 50))
+        font = QtGui.QFont()
+        font.setPointSize(22)
+        font.setKerning(True)
+        font.setStyleStrategy(QtGui.QFont.PreferAntialias)
         self.shutdown_button.setFont(font)
         self.shutdown_button.setStyleSheet("QToolButton {\n"
-"    border: 1px solid #acacac;\n"
-"    border-radius: 1px;\n"
-"    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,\n"
-"                                    stop:0 #f0f0f0, stop:1 #e5e5e5);\n"
+"    border: 0px solid rgb(75,75,75);\n"
+"    border-radius: 3px;\n"
+"    background-color: transparent;\n"
+"    width: 27px;\n"
+"    height: 27px;\n"
 "    color: rgb(45,45,45);\n"
 "}\n"
 "\n"
-"QToolButton:hover {\n"
-"    border: 1px solid #7eb4ea;\n"
-"    border-radius: 1px;\n"
-"    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,\n"
-"                                    stop:0 #ecf4fc, stop:1 #dcecfc);\n"
+"QToolButton:flat {\n"
+"    border: none;\n"
+"}")
+        self.shutdown_button.setText("")
+        icon2 = QtGui.QIcon()
+        icon2.addPixmap(QtGui.QPixmap("icons/shutdown_icon.svg"), QtGui.QIcon.Normal, QtGui.QIcon.Off)
+        self.shutdown_button.setIcon(icon2)
+        self.shutdown_button.setIconSize(QtCore.QSize(45, 45))
+        self.shutdown_button.setObjectName("shutdown_button")
+        self.horizontalLayout_3.addWidget(self.shutdown_button)
+        spacerItem5 = QtWidgets.QSpacerItem(13, 20, QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Minimum)
+        self.horizontalLayout_3.addItem(spacerItem5)
+        self.verticalLayout_3.addLayout(self.horizontalLayout_3)
+        self.shutdown_lb = QtWidgets.QLabel(closeWindow)
+        self.shutdown_lb.setMinimumSize(QtCore.QSize(0, 0))
+        self.shutdown_lb.setMaximumSize(QtCore.QSize(16777215, 16777215))
+        font = QtGui.QFont()
+        font.setFamily("Source Sans Pro")
+        font.setPointSize(14)
+        font.setKerning(True)
+        font.setStyleStrategy(QtGui.QFont.PreferAntialias)
+        self.shutdown_lb.setFont(font)
+        self.shutdown_lb.setStyleSheet("QLabel {\n"
+"    color: rgb(45,45,45);\n"
+"}")
+        self.shutdown_lb.setAlignment(QtCore.Qt.AlignCenter)
+        self.shutdown_lb.setWordWrap(True)
+        self.shutdown_lb.setObjectName("shutdown_lb")
+        self.verticalLayout_3.addWidget(self.shutdown_lb)
+        self.gridLayout.addLayout(self.verticalLayout_3, 0, 2, 1, 1)
+        spacerItem6 = QtWidgets.QSpacerItem(92, 20, QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Minimum)
+        self.gridLayout.addItem(spacerItem6, 1, 0, 1, 1)
+        self.verticalLayout_4 = QtWidgets.QVBoxLayout()
+        self.verticalLayout_4.setSpacing(0)
+        self.verticalLayout_4.setObjectName("verticalLayout_4")
+        self.horizontalLayout_4 = QtWidgets.QHBoxLayout()
+        self.horizontalLayout_4.setObjectName("horizontalLayout_4")
+        spacerItem7 = QtWidgets.QSpacerItem(13, 20, QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Minimum)
+        self.horizontalLayout_4.addItem(spacerItem7)
+        self.cancel_button = QtWidgets.QToolButton(closeWindow)
+        self.cancel_button.setEnabled(True)
+        sizePolicy = QtWidgets.QSizePolicy(QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Fixed)
+        sizePolicy.setHorizontalStretch(0)
+        sizePolicy.setVerticalStretch(0)
+        sizePolicy.setHeightForWidth(self.cancel_button.sizePolicy().hasHeightForWidth())
+        self.cancel_button.setSizePolicy(sizePolicy)
+        self.cancel_button.setMinimumSize(QtCore.QSize(50, 50))
+        self.cancel_button.setMaximumSize(QtCore.QSize(50, 50))
+        font = QtGui.QFont()
+        font.setPointSize(22)
+        font.setKerning(True)
+        font.setStyleStrategy(QtGui.QFont.PreferAntialias)
+        self.cancel_button.setFont(font)
+        self.cancel_button.setStyleSheet("QToolButton {\n"
+"    border: 0px solid rgb(75,75,75);\n"
+"    border-radius: 3px;\n"
+"    background-color: transparent;\n"
+"    width: 27px;\n"
+"    height: 27px;\n"
+"    color: rgb(45,45,45);\n"
 "}\n"
 "\n"
-"QToolButton:pressed {\n"
-"    border: 1px solid #579de5;\n"
-"    border-radius: 1px;\n"
-"    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,\n"
-"                                    stop:0 #daecfc, stop:1 #c4e0fc);\n"
+"QToolButton:flat {\n"
+"    border: none;\n"
 "}")
-        self.shutdown_button.setObjectName("shutdown_button")
-        self.verticalLayout.addWidget(self.shutdown_button)
-        self.gridLayout.addLayout(self.verticalLayout, 0, 1, 1, 1)
-        spacerItem3 = QtWidgets.QSpacerItem(45, 20, QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Minimum)
-        self.gridLayout.addItem(spacerItem3, 0, 2, 1, 1)
+        self.cancel_button.setText("")
+        icon3 = QtGui.QIcon()
+        icon3.addPixmap(QtGui.QPixmap("icons/del_icon.svg"), QtGui.QIcon.Normal, QtGui.QIcon.Off)
+        self.cancel_button.setIcon(icon3)
+        self.cancel_button.setIconSize(QtCore.QSize(45, 45))
+        self.cancel_button.setObjectName("cancel_button")
+        self.horizontalLayout_4.addWidget(self.cancel_button)
+        spacerItem8 = QtWidgets.QSpacerItem(13, 20, QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Minimum)
+        self.horizontalLayout_4.addItem(spacerItem8)
+        self.verticalLayout_4.addLayout(self.horizontalLayout_4)
+        self.cancel_lb = QtWidgets.QLabel(closeWindow)
+        self.cancel_lb.setMinimumSize(QtCore.QSize(0, 0))
+        self.cancel_lb.setMaximumSize(QtCore.QSize(16777215, 16777215))
+        font = QtGui.QFont()
+        font.setFamily("Source Sans Pro")
+        font.setPointSize(14)
+        font.setKerning(True)
+        font.setStyleStrategy(QtGui.QFont.PreferAntialias)
+        self.cancel_lb.setFont(font)
+        self.cancel_lb.setStyleSheet("QLabel {\n"
+"    color: rgb(45,45,45);\n"
+"}")
+        self.cancel_lb.setAlignment(QtCore.Qt.AlignCenter)
+        self.cancel_lb.setWordWrap(True)
+        self.cancel_lb.setObjectName("cancel_lb")
+        self.verticalLayout_4.addWidget(self.cancel_lb)
+        self.gridLayout.addLayout(self.verticalLayout_4, 1, 1, 1, 1)
+        spacerItem9 = QtWidgets.QSpacerItem(92, 20, QtWidgets.QSizePolicy.Expanding, QtWidgets.QSizePolicy.Minimum)
+        self.gridLayout.addItem(spacerItem9, 1, 2, 1, 1)
 
         self.retranslateUi(closeWindow)
         QtCore.QMetaObject.connectSlotsByName(closeWindow)
 
     def retranslateUi(self, closeWindow):
         _translate = QtCore.QCoreApplication.translate
-        self.exit_button.setText(_translate("closeWindow", "Quitter"))
-        self.reboot_button.setText(_translate("closeWindow", "Redémarrer"))
-        self.shutdown_button.setText(_translate("closeWindow", "Eteindre"))
+        self.exit_lb.setText(_translate("closeWindow", "Quitter"))
+        self.reboot_lb.setText(_translate("closeWindow", "Redémarrer"))
+        self.shutdown_lb.setText(_translate("closeWindow", "Eteindre"))
+        self.cancel_lb.setText(_translate("closeWindow", "Annuler"))
